# asr-cli

./: .pypirc_example  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
examples/: dev.ipynb
src/asr_cli/: .gitignore  asr_config.py  asr_getter.py  infer.py  main.py
src/asr_cli/asr/: asr.py  asr_wav2vec2_ctc.py
src/asr_cli/utils/: audio.py
