[project]
name = "asr-cli_dan1ar"
version = "0.0.2"
authors = [
  { name="Dan1ar", email="andan.com@mail.ru" },
]
description = "A small cli tool for Automatic Speech Recognition"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dan1aR/asr-cli"
Issues = "https://github.com/Dan1aR/asr-cli/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["asr_cli", "asr_cli.*"]

[tool.setuptools.package-data]
asr_cli = ["resources/*"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
